--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/platform-express": "^6.0.0",
     "apollo-server-express": "^2.9.0",
     "csurf": "^1.10.0",
+    "dotenv": "^8.1.0",
     "graphql": "^14.5.3",
     "graphql-tools": "^4.0.5",
     "helmet": "^3.20.0",
