--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "apollo-server-express": "^2.9.0",
     "csurf": "^1.10.0",
     "dotenv": "^8.1.0",
+    "googleapis": "^42.0.0",
     "graphql": "^14.5.3",
     "graphql-tools": "^4.0.5",
     "helmet": "^3.20.0",
