--- a/package.json
+++ b/package.json
@@ -24,18 +24,21 @@
     "@nestjs/graphql": "^6.4.2",
     "@nestjs/platform-express": "^6.0.0",
     "apollo-server-express": "^2.9.0",
+    "btoa": "^1.2.1",
     "csurf": "^1.10.0",
     "dotenv": "^8.1.0",
     "googleapis": "^42.0.0",
     "graphql": "^14.5.3",
     "graphql-tools": "^4.0.5",
     "helmet": "^3.20.0",
+    "node-fetch": "^2.6.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
+    "@types/btoa": "^1.2.3",
     "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
