--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/graphql": "^6.4.2",
     "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/typeorm": "^6.1.3",
     "apollo-server-express": "^2.9.0",
     "btoa": "^1.2.1",
     "csurf": "^1.10.0",
@@ -32,9 +33,11 @@
     "graphql-tools": "^4.0.5",
     "helmet": "^3.20.0",
     "node-fetch": "^2.6.0",
+    "pg": "^7.12.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "typeorm": "^0.2.18"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
