--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/graphql": "^6.4.2",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.1.3",
+    "@types/dotenv": "^6.1.1",
     "apollo-server-express": "^2.9.0",
     "btoa": "^1.2.1",
     "csurf": "^1.10.0",
