--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/dotenv": "^6.1.1",
     "apollo-server-express": "^2.9.0",
     "btoa": "^1.2.1",
+    "cookie-parser": "^1.4.4",
     "csurf": "^1.10.0",
     "dotenv": "^8.1.0",
     "googleapis": "^42.0.0",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
     "@types/btoa": "^1.2.3",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
