--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ after_success:
   - docker --version # document the version travis is using
   - pip install --user awscli # install aws cli w/o sudo
   - export PATH=$PATH:$HOME/.local/bin # put aws in the path
-  - eval $(aws ecr get-login --region us-east-1) #needs AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY envvars
+  - eval $(aws ecr get-login --region eu-north-1) #needs AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY envvars
   - docker build -t kmelct/ranked-app .
   - docker tag kmelct/ranked-app:latest 821925855770.dkr.ecr.eu-north-1.amazonaws.com/kmelct/ranked-app:latest
   - docker push 821925855770.dkr.ecr.eu-north-1.amazonaws.com/kmelct/ranked-app:latest
