--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
-    "typeorm": "^0.2.18"
+    "typeorm": "^0.2.18",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
@@ -49,6 +50,7 @@
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
     "@types/supertest": "2.0.7",
+    "@types/uuid": "^3.4.5",
     "jest": "24.7.1",
     "prettier": "1.17.0",
     "supertest": "4.0.2",
