--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "googleapis": "^42.0.0",
     "helmet": "^3.20.0",
     "ioredis": "^4.14.1",
+    "jsonwebtoken": "^8.5.1",
     "nestjs-redis": "^1.2.3",
     "node-fetch": "^2.6.0",
     "pg": "^7.12.1",
+    "query-string": "^6.8.3",
+    "rand-token": "^0.4.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
