--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "jsonwebtoken": "^8.5.1",
     "nestjs-redis": "^1.2.3",
     "node-fetch": "^2.6.0",
+    "nodemailer": "^6.3.0",
+    "nodemailer-ses-transport": "^1.5.1",
     "pg": "^7.12.1",
     "query-string": "^6.8.3",
     "reflect-metadata": "^0.1.12",
@@ -48,6 +50,7 @@
     "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
+    "@types/nodemailer": "^6.2.1",
     "@types/supertest": "2.0.7",
     "@types/uuid": "^3.4.5",
     "jest": "24.7.1",
