--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.1.3",
     "btoa": "^1.2.1",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.10.1",
     "cookie-parser": "^1.4.4",
     "csurf": "^1.10.0",
     "dotenv": "^8.1.0",
