--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "csurf": "^1.10.0",
     "dotenv": "^8.1.0",
     "googleapis": "^42.0.0",
+    "handlebars": "^4.3.3",
     "helmet": "^3.20.0",
     "ioredis": "^4.14.1",
     "jsonwebtoken": "^8.5.1",
