--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.1.3",
     "btoa": "^1.2.1",
     "class-transformer": "^0.2.3",
@@ -44,6 +45,7 @@
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
+    "swagger-ui-express": "^4.1.2",
     "typeorm": "^0.2.18",
     "uuid": "^3.3.3"
   },
