--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm:cli": "ts-node ./node_modules/typeorm/cli -f ./src/modules/dbl/ormconfig.cli.ts"
   },
   "dependencies": {
@@ -53,6 +52,7 @@
     "@nestjs/testing": "^6.0.0",
     "@types/btoa": "^1.2.3",
     "@types/cookie-parser": "^1.4.2",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
@@ -75,8 +75,8 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
-    "testRegex": ".spec.ts$",
+    "rootDir": "tests",
+    "testRegex": ".spec.ts$|.test.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
